// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/store/View/ViewColumnButton default 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="lck-overlay-panel"
  >
    <button
      class="p-button p-component p-button-outlined p-button-secondary"
      type="button"
    >
      <span
        class="pi pi-eye-slash p-button-icon p-button-icon-left"
      />
       
      <span
        class="p-button-label"
      >
        aucune colonne
      </span>
       
      <!---->
      <span
        class="p-ink"
      />
    </button>
     
    <!---->
  </div>
</div>
`;

exports[`storyshots components/store/View/ViewColumnButton disabled 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="lck-overlay-panel"
  >
    <button
      class="p-button p-component p-button-outlined p-button-secondary"
      disabled="disabled"
      type="button"
    >
      <span
        class="pi pi-eye-slash p-button-icon p-button-icon-left"
      />
       
      <span
        class="p-button-label"
      >
        aucune colonne
      </span>
       
      <!---->
      <span
        class="p-ink"
      />
    </button>
     
    <!---->
  </div>
</div>
`;

exports[`storyshots components/store/View/ViewColumnButton with value and columns 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="lck-overlay-panel"
  >
    <button
      class="p-button p-component p-button-outlined p-button-secondary"
      type="button"
    >
      <span
        class="pi pi-eye-slash p-button-icon p-button-icon-left"
      />
       
      <span
        class="p-button-label"
      >
        4 colonnes
      </span>
       
      <!---->
      <span
        class="p-ink"
      />
    </button>
     
    <!---->
  </div>
</div>
`;
